--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700&display=swap');
+
+:root {
+    --color-accent-100: 216deg 88% 60%;
+    --color-accent-200: 216deg 86% 55%;
+    --color-accent-2: 207deg 63% 92%;
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        --color-bg: 0deg 0% 100%;
+        --color-text: 223deg 16% 9%;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --color-bg: 0deg 0% 100%;
+        --color-text: 223deg 16% 9%;
+    }
+}
