--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700&display=swap');
 
-
 :root {
     --color-accent-1: 216deg 88% 60%;
     --color-accent-2: 216deg 86% 55%;
@@ -11,6 +10,8 @@
     --color-accent-4: 206deg 100% 90%;
     --color-accent-5: 206deg 100% 95%;
     --color-accent-6: 235deg 14% 15%;
+    --color-error: 0deg 83% 47%;
+    --color-correct: 152deg 52% 49%;
 }
 
 @media (prefers-color-scheme: light) {
