--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
     --color-accent-5: 206deg 100% 95%;
     --color-accent-6: 235deg 14% 15%;
     --color-error: 0deg 83% 47%;
-    --color-correct: 152deg 52% 49%;
+    --color-done: 152deg 52% 49%;
 }
 
 @media (prefers-color-scheme: light) {
