--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -14,6 +14,11 @@
     --color-done: 152deg 52% 49%;
 }
 
+#root {
+    isolation: isolate;
+    z-index: 1;
+}
+
 @media (prefers-color-scheme: light) {
     :root {
         --color-bg: 0deg 0% 100%;
